--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.0.0",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
